# OOP_lab3

./: .gitignore  CMakeLists.txt  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  rhomb.h  trapezoid.h
src/: array.cpp  figure.cpp  rectangle.cpp  rhomb.cpp  trapezoid.cpp
test/: tests_l3.cpp
